# doctor

./: .gitignore  README.md  agent-context  doctor  pyproject.toml
config/: access_policy.json  wiki_projects.example.json
docs/: AB_ROUTES.md  AGENT_CONTEXT_RUNTIME_V1_GOAL.md  ARCHITECTURE.md  ARCHITECTURE_CONTEXT.md  ARENA.md  CLOUD_TASK_DOWNLOADS_CONTEXT_PACK_V0_1.md  COLD_INDEX_RAG.md  CONTEXT_MOE_INTERFACE.md  CONTEXT_ROUTER_FRAMEWORK.md  DATA_CONTRACT.md  DEVELOPER_ONBOARDING.md  DOCTOR_DOUYIN_V0_1.md  DOCTOR_HANDOFF.md  DOCTOR_LAB.md  DOCTOR_RESEARCH_SCORECARD.md  DOCTOR_RUNTIME_VM.md  DOCTOR_VISION_ROADMAP.md  FILE_INGESTION_WORKFLOW.md  GOAL_CONTEXT_RESOLVER_SUBAGENTS.md  HANDOFF.md  KNOWN_GAPS.md  LLM_WIKI_OKF_BASELINE.md  MCP_SERVER.md  MIRROR_LAB_V0_2.md  MODULE_MAP.md  OPEN_SOURCE_RELEASE_BOUNDARY.md  ROADMAP.md  RUNTIME_FLOW.md  VAULT_RESOLVER.md
reports/: github_reuse_report.md
scripts/: benchmark_embedding_backends.py  com.gengrf.agent-context.semantic-maintenance.sh  doctor-lab.command  douyin_tiktok_api_parse_one.py  live_three_branch_run.sh  local_downloads_build.sh
tests/: test_agent_preflight.py  test_answer_review.py  test_benchmark_embedding_backends.py  test_clarify.py  test_codebase_memory_provider.py  test_codex_hook.py  test_codex_plus_smoke.py  test_cold_index_batch_embedding.py  test_comparison.py  test_context_resolver.py  test_context_review.py  test_developer_onboarding_docs.py  test_douyin_provider.py  test_downloads_context_pack.py  test_evidence.py  test_evidence_index.py  test_execution_review.py  test_feedback_model.py  (+24 more)
(+81 files in other folders)
