[project]
name = "agent-context-system"
version = "0.1.0"
description = "Local-first file ingestion and hot context pack generation for personal agents."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.2",
  "mcp>=1.0",
]

[project.scripts]
agent-context = "agent_context.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_context"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
